dataset1235/2025-2/1153765216/users/1937138466/executions/2372395858_1914301514.log
== SUBMISSION (2025-08-28 19:06:19)
-- CODE: 
consumo = float(input("Informe um valor: "))
assinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:05:46)
-- CODE: 
consumo = float(input("Informe um valor: "))
asinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura*(31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:47:54)
-- CODE: 
consumo = int(input("Informe um valor: "))
asinatura =  (0.28 * 60) + 23.00
total = assinatura + (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '180.29'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '113.86'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '221.31'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '165.7'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '72.51'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:03:51)
-- CODE: 
consumo = int(input("Informe um valor: "))
asinatura =  (0.28 * 60) + 23.00
total = assinatura + (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '180.29'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '113.86'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '221.31'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '165.7'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '72.51'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:07:14)
-- CODE: 
consumo = float(input("Informe um valor: "))
assinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
---- user output:
Informe um valor: 96.26
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
---- user output:
Informe um valor: 66.81
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
---- user output:
Informe um valor: 71.89
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
---- user output:
Informe um valor: 111.31
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
---- user output:
Informe um valor: 90.91
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
---- user output:
Informe um valor: 56.73
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:06:00)
-- CODE: 
consumo = float(input("Informe um valor: "))
asinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:06:01)
-- CODE: 
consumo = float(input("Informe um valor: "))
asinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:05:44)
-- CODE: 
consumo = float(input("Informe um valor: "))
asinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura*(31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:47:29)
-- CODE: 
consumo = int(input("Informe um valor em minutos: "))
asinatura =  (0.28 * 60) + 23.00
total = assinatura + (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '180.29'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '113.86'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '221.31'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '165.7'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '72.51'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:05:47)
-- CODE: 
consumo = float(input("Informe um valor: "))
asinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura*(31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura*(31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:03:51)
-- CODE: 
consumo = int(input("Informe um valor: "))
asinatura =  (0.28 * 60) + 23.00
total = assinatura + (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '180.29'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '113.86'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '221.31'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '165.7'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '72.51'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:06:00)
-- CODE: 
consumo = float(input("Informe um valor: "))
asinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = assinatura + assinatura * (31/100)
            ^^^^^^^^^^
NameError: name 'assinatura' is not defined. Did you mean: 'asinatura'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:06:15)
-- CODE: 
consumo = float(input("Informe um valor: "))
assinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:06:16)
-- CODE: 
consumo = float(input("Informe um valor: "))
assinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:47:30)
-- CODE: 
consumo = int(input("Informe um valor em minutos: "))
asinatura =  (0.28 * 60) + 23.00
total = assinatura + (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '180.29'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '113.86'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '221.31'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '165.7'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor em minutos: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '72.51'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:47:53)
-- CODE: 
consumo = int(input("Informe um valor: "))
asinatura =  (0.28 * 60) + 23.00
total = assinatura + (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '180.29'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '113.86'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '221.31'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '165.7'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input("Informe um valor: "))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '72.51'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:06:16)
-- CODE: 
consumo = float(input("Informe um valor: "))
assinatura =  (0.28 * consumo) + 23
total = assinatura + assinatura * (31/100)
print(round(valor, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
